// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToastTest render: render content 1`] = `
<div
  aria-live="polite"
  class="toastContainer"
>
  <div
    class="ms-fadeIn100 toastContent"
  >
    hello world
  </div>
</div>
`;

exports[`ToastTest render: render nothing before show() is called 1`] = `
<div
  aria-live="polite"
  class="toastContainer"
/>
`;
